# primetools

./: CMakeLists.txt  README.md
src/: euclid.hpp  euler.hpp  factorise.cpp  factorise.hpp  fermat.cpp  fermat.hpp  main.cpp  miller_rabin.cpp  miller_rabin.hpp  pollards_rho.cpp  pollards_rho.hpp  primes.cpp  primes.hpp  util.cpp  util.hpp
tools/: smallprimes.py
